--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.3.3
-bcrypt==4.0.1
+flask==3.0.0
+bcrypt==4.1.3
 pyjwt==2.8.0
-pandas==2.1.1
-numpy==1.25.2
-werkzeug==2.3.7
+werkzeug==3.0.1
+sqlalchemy==2.0.23
+flask-sqlalchemy==3.1.1
+flask-migrate==4.0.5
