--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ werkzeug==3.0.1
 sqlalchemy==2.0.23
 flask-sqlalchemy==3.1.1
 flask-migrate==4.0.5
+flask-login==0.6.3
+
+# Admin panel
+flask-admin==1.6.1
+wtforms==3.1.1
 
 # Document processing
 pandas==2.1.4
