--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ sqlalchemy==2.0.23
 flask-sqlalchemy==3.1.1
 flask-migrate==4.0.5
 flask-login==0.6.3
+jinja2>=3.0.0
 
 # Admin panel
 flask-admin==1.6.1
