--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask==3.0.0
+flask-cors==6.0.1
 bcrypt==4.1.3
 pyjwt==2.8.0
 werkzeug==3.0.1
@@ -7,6 +8,10 @@ flask-sqlalchemy==3.1.1
 flask-migrate==4.0.5
 flask-login==0.6.3
 jinja2>=3.0.0
+requests==2.32.5
+
+# PDF Generation
+reportlab>=4.0.0
 
 # Admin panel
 flask-admin==1.6.1
