feat: Enhance database initialization and Azure deployment setup
- Updated sqlalchemy_db_init.py to include all models from models.py
- Added comprehensive database table creation for all entities
- Enhanced error handling and connection validation
- Added sample data initialization functions
- Improved Azure deployment configuration
- Added database schema validation and initialization

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -9,12 +9,14 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-azure.txt .
+RUN pip install --no-cache-dir -r requirements-azure.txt
 
 # Copy application code
 COPY simple_api.py .
 COPY models.py .
+COPY config.py .
+COPY init_postgres_db.py .
 COPY api/ ./api/
 
 # Create necessary directories
