--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -9,8 +9,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-azure.txt .
+RUN pip install --no-cache-dir -r requirements-azure.txt
 
 # Copy application code
 COPY custom_admin.py .
@@ -18,6 +18,7 @@ COPY models.py .
 COPY config.py .
 COPY pdf_generator.py .
 COPY email_service.py .
+COPY init_postgres_db.py .
 COPY templates/ ./templates/
 COPY static/ ./static/
 
