--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,112 @@
-# Flask Application Configuration
-# Copy this file to .env and update with your actual values
-# IMPORTANT: Change all secret keys before deploying to production!
+# RFPO Application Environment Variables
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to version control!
 
-# Security Keys (CRITICAL: CHANGE THESE!)
+# ============================================================================
+# DATABASE CONFIGURATION
+# ============================================================================
+
+# PostgreSQL Connection (Azure Production)
+# Format: postgresql://username:password@host:port/database?sslmode=require
+DATABASE_URL=postgresql://rfpoadmin:YOUR_PASSWORD@rfpo-db-xxxxx.postgres.database.azure.com:5432/rfpodb?sslmode=require
+
+# SQLite (Local Development - Optional)
+# DATABASE_URL=sqlite:///instance/rfpo_admin.db
+
+# ============================================================================
+# APPLICATION SECRETS (CRITICAL: CHANGE THESE!)
+# ============================================================================
+
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 FLASK_SECRET_KEY=CHANGE-ME-super-secret-flask-key-for-production-use-long-random-string
+USER_APP_SECRET_KEY=CHANGE-ME-another-random-secret-key-for-user-app
+API_SECRET_KEY=CHANGE-ME-yet-another-random-secret-key-for-api
 JWT_SECRET_KEY=CHANGE-ME-super-secret-jwt-key-for-production-use-different-long-random-string
 
 # Application Settings
 FLASK_ENV=production
 FLASK_DEBUG=False
-MAX_CONTENT_LENGTH=16777216
+DEBUG=False
+
+# ============================================================================
+# API CONFIGURATION
+# ============================================================================
+
+# API Base URLs (for User App to connect to API)
+API_BASE_URL=http://127.0.0.1:5002/api
+ADMIN_API_URL=http://127.0.0.1:5111/api
+
+# Azure Production URLs (uncomment for production)
+# API_BASE_URL=https://rfpo-api.livelyforest-d06a98a0.eastus.azurecontainerapps.io/api
+# ADMIN_API_URL=https://rfpo-admin.livelyforest-d06a98a0.eastus.azurecontainerapps.io/api
+
+# ============================================================================
+# FILE UPLOAD & PROCESSING
+# ============================================================================
+
 UPLOAD_FOLDER=uploads
-
-# Server Configuration
-HOST=127.0.0.1
-PORT=5000
-
-# Database Configuration (for future database migration)
-DATABASE_URL=sqlite:///app.db
-DATABASE_POOL_SIZE=5
-
-# User Management Settings
-PASSWORD_MIN_LENGTH=12
-PASSWORD_MAX_LENGTH=128
-LOGIN_ATTEMPT_LIMIT=5
-TOKEN_EXPIRY_HOURS=24
-REMEMBER_ME_DAYS=30
-ACCOUNT_LOCKOUT_MINUTES=30
-
-# File Processing Settings
-ALLOWED_EXTENSIONS=csv,xlsx,xls
+MAX_CONTENT_LENGTH=16777216
+ALLOWED_EXTENSIONS=csv,xlsx,xls,pdf,doc,docx
 MAX_FILE_SIZE_MB=16
 PANDAS_CHUNK_SIZE=10000
 
-# Email Configuration (for user notifications - optional)
+# ============================================================================
+# EMAIL CONFIGURATION
+# ============================================================================
+
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=your-email@example.com
 MAIL_PASSWORD=your-app-password
 MAIL_DEFAULT_SENDER=noreply@yourapp.com
+SUPPORT_EMAIL=support@yourapp.com
 
-# Logging Configuration
-LOG_LEVEL=INFO
-LOG_MAX_BYTES=10485760
-LOG_BACKUP_COUNT=3
+# ============================================================================
+# SECURITY SETTINGS
+# ============================================================================
 
-# Security Headers (for production deployment)
+PASSWORD_MIN_LENGTH=12
+PASSWORD_MAX_LENGTH=128
+LOGIN_ATTEMPT_LIMIT=5
+TOKEN_EXPIRY_HOURS=24
+REMEMBER_ME_DAYS=30
+ACCOUNT_LOCKOUT_MINUTES=30
 FORCE_HTTPS=False
 SESSION_COOKIE_SECURE=False
 SESSION_COOKIE_HTTPONLY=True
 SESSION_COOKIE_SAMESITE=Lax
+
+# ============================================================================
+# LOGGING & MONITORING
+# ============================================================================
+
+LOG_LEVEL=INFO
+LOG_MAX_BYTES=10485760
+LOG_BACKUP_COUNT=3
+
+# Application Insights (Azure - Optional)
+# APPINSIGHTS_INSTRUMENTATION_KEY=your-key-here
+
+# ============================================================================
+# AZURE CONFIGURATION (Production Only)
+# ============================================================================
+
+AZURE_SUBSCRIPTION_ID=e108977f-44ed-4400-9580-f7a0bc1d3630
+AZURE_RESOURCE_GROUP=rg-rfpo-e108977f
+AZURE_LOCATION=eastus
+
+# Azure Storage (for file uploads - optional)
+# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=...
+# AZURE_STORAGE_CONTAINER=uploads
+
+# ============================================================================
+# NOTES
+# ============================================================================
+# 1. Generate secure secrets: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# 2. For Gmail, use App Passwords: https://support.google.com/accounts/answer/185833
+# 3. Never commit .env file to version control
+# 4. Rotate secrets regularly (at least every 90 days)
 
 # Rate Limiting (requests per minute)
 RATE_LIMIT_DEFAULT=60
