--- a/env.example
+++ b/env.example
@@ -3,7 +3,7 @@
 # JWT Secret Key (change in production)
 JWT_SECRET_KEY=jwt-secret-key-change-in-production
 
-# API Secret Key (change in production)  
+# API Secret Key (change in production)
 API_SECRET_KEY=api-secret-key-change-in-production
 
 # User App Secret Key (change in production)
@@ -17,5 +17,12 @@ DATABASE_URL=sqlite:///instance/rfpo_admin.db
 
 # Flask Environment
 FLASK_ENV=development
+
+
+# Azure Communication Services (Email)
+# Connection string copied from the Azure Communication Services resource
+ACS_CONNECTION_STRING=
+# Verified sender email address/domain configured in ACS
+ACS_SENDER_EMAIL=no-reply@example.com
 
 
