fix(user-app): include shared modules in image and make /health non-blocking
- Dockerfile.user-app: copy error_handlers.py, logging_config.py, exceptions.py, env_config.py
- app.py: remove unused import, add spacing, and simplify /health to avoid external API call

This resolves container startup import error and prevents ACA 504 on health checks.

--- a/Dockerfile.user-app
+++ b/Dockerfile.user-app
@@ -17,6 +17,12 @@ COPY app.py .
 COPY templates/ ./templates/
 COPY static/ ./static/
 
+# Copy shared modules required by the user app
+COPY error_handlers.py ./
+COPY logging_config.py ./
+COPY exceptions.py ./
+COPY env_config.py ./
+
 # Expose port
 EXPOSE 5000
 
