--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-admin_cookies.txt
 # ----- OS / Editor -----
 .DS_Store
 .AppleDouble
 .LSOverride
 .Spotlight-V100
 .Trashes
+._*
+ehthumbs.db
+Thumbs.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+.sublime-project
+.sublime-workspace
 
 # ----- Python -----
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
 .pytest_cache/
 .mypy_cache/
 .ruff_cache/
 .coverage*
 coverage.xml
 htmlcov/
+.tox/
+.nox/
+.cache
+nosetests.xml
+*.cover
+*.py,cover
+.hypothesis/
 
 # ----- Environments / Secrets -----
 .env
@@ -25,53 +42,18 @@ htmlcov/
 !env.example
 *.env.local
 *.secret
+.venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.python-version
 
 # ----- Build / Dist -----
 dist/
 build/
-*.egg-info/
-
-# ----- Docker / Compose -----
-docker-compose.override.yml
-
-# ----- Local Databases / Instances -----
-instance/*.db
-instance/*.sqlite
-instance/*.sqlite3
-
-# ----- Uploads (keep folder only) -----
-uploads/*
-!uploads/.gitkeep
-
-# ----- Logs & Artifacts -----
-logs/
-*.log
-deployment-log.txt
-DEPLOYMENT_TEST_RESULTS.md
-cookies*.txt
-
-# ----- Cache / Temp -----
-*.cache
-tmp/
-temp/
-.benchmarks/
-
-# ----- Azure / CI extras (local) -----
-azure/*.local.env
-*.azcli
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -87,175 +69,77 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# ----- Docker / Compose -----
+docker-compose.override.yml
 
-# IPython
-profile_default/
-ipython_config.py
+# ----- Local Databases / Instances -----
+instance/*.db
+instance/*.sqlite
+instance/*.sqlite3
+*.db
+*.sqlite
+*.sqlite3
+db.sqlite3-journal
 
-# pyenv
-.python-version
-
-# pipenv
-Pipfile.lock
-
-# PEP 582
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Application specific files
-# User data and sensitive information
-config/users.json
-logs/
-*.log
-
-# Upload files (keep structure but not content)
+# ----- Uploads (keep folder only) -----
+uploads/*
+!uploads/.gitkeep
 uploads/*.xlsx
 uploads/*.xls
 uploads/*.csv
 uploads/*.pdf
-!uploads/.gitkeep
 
-# IDE and Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.sublime-project
-.sublime-workspace
+# ----- Logs & Artifacts -----
+logs/
+*.log
+deployment-log.txt
+cookies*.txt
+admin_cookies.txt
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-Desktop.ini
+# ----- Cache / Temp -----
+*.cache
+tmp/
+temp/
+*.tmp
+*.temp
+.benchmarks/
 
-# Backup files
+# ----- Azure / CI extras (local) -----
+azure/*.local.env
+*.azcli
+
+# ----- Documentation Build -----
+docs/_build/
+
+# ----- Legacy / Backup Files -----
 *.bak
 *.backup
 *.old
 
-# Temporary files
-*.tmp
-*.temp
-
-# Flask session files
+# ----- Flask / Web -----
 flask_session/
+.webassets-cache
 
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Node.js (if frontend build tools are added)
+# ----- Node.js (if frontend tools added) -----
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# macOS
-.AppleDouble
-.LSOverride
+# ----- Jupyter Notebook -----
+.ipynb_checkpoints
 
-# Windows
-[Dd]esktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-*.lnk
+# ----- Package managers -----
+Pipfile.lock
+__pypackages__/
+
+# ----- Translation files -----
+*.mo
+*.pot
+
+# ----- Specific application artifacts -----
+config/users.json
 /uploads/terms
 MFGPROOF_PO_p.pdf
-/uploads
-cookies.txt
