--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
     rev: 7.1.1
     hooks:
       - id: flake8
-        args: [--max-line-length=120, --extend-ignore=E203,W503]
+        args: [--max-line-length=120, --extend-ignore=E203, W503]
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
@@ -33,5 +33,5 @@ repos:
     rev: 1.7.5
     hooks:
       - id: bandit
-        args: ['-r', '.', '-x', 'tests']
+        args: ["-r", ".", "-x", "tests"]
         exclude: ^tests/
